--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "postcollegeguide",
+  "name": "angular-tempalte",
   "version": "0.1.0",
   "directory": "bower_components/",
   "authors": [
